tests/ui/parser/let/suggest-static-for-global-var-mut.rs
let mut _data = vec![1,2,3];
//~^ ERROR `let` statements are not allowed outside of functions or const blocks

fn main() {
}
